--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -20,20 +20,6 @@ jobs:
     pool:
       name: 'hmcts-ss-prod'
     steps:
-      - task: AzureKeyVault@2
-        displayName: 'Access reporting vault'
-        inputs:
-          azureSubscription: 'Prod-DB-Reporting'
-          KeyVaultName: 'sendgridprod'
-          SecretsFilter: 'hmcts-db-reporting-api-key'
-          RunAsPreJob: false
-      - task: Bash@3
-        inputs:
-          filePath: 'email_report.sh'
-        env:
-          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
-          CONTAINER_NAME: 'daily'
-          retryCountOnTaskFailure: '3'
       - task: AzureCLI@2
         displayName: 'Generate Password token'
         name: gettoken
@@ -60,3 +46,18 @@ jobs:
           USERNAME: $(idam-rd-system-user-username)
           SYSPASS: $(idam-rd-system-user-password)
           ALL_USERS_FLAG: 1
+      - task: AzureKeyVault@2
+        displayName: 'Access reporting vault'
+        inputs:
+          azureSubscription: 'Prod-DB-Reporting'
+          KeyVaultName: 'sendgridprod'
+          SecretsFilter: 'hmcts-db-reporting-api-key'
+          RunAsPreJob: false
+      - task: Bash@3
+        displayName: 'Email report'
+        inputs:
+          filePath: 'email_report.sh'
+        env:
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
+          CONTAINER_NAME: 'daily'
+          retryCountOnTaskFailure: '3'
