--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -49,10 +49,14 @@ jobs:
           azureSubscription: 'DCD-CNP-DEV'
           KeyVaultName: 'rd-aat'
           SecretsFilter: 'user-profile-api-POSTGRES-USER,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password'
-          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
         env:
           AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-USER)
           OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
           USERNAME: $(idam-rd-system-user-username)
           SYSPASS: $(idam-rd-system-user-password)
           ALL_USERS_FLAG: 1
+      - task: Bash@3
+        inputs:
+          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
+        env:
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
