--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -48,8 +48,9 @@ jobs:
         inputs:
           azureSubscription: 'DCD-CNP-DEV'
           KeyVaultName: 'rd-aat'
-          SecretsFilter: 'user-profile-api-POSTGRES-USER,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password'
+          SecretsFilter: 'user-profile-api-POSTGRES-USER,user-profile-api-POSTGRES-PASS,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password'
         env:
+          PGPASSWORD: $(user-profile-api-POSTGRES-PASS)
           AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-USER)
           OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
           USERNAME: $(idam-rd-system-user-username)
