--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -33,6 +33,7 @@ jobs:
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             echo $output
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
+          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
       - task: AzureKeyVault@2
         displayName: 'Access reporting vault'
         inputs:
