--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -54,6 +54,7 @@ jobs:
           azureSubscription: 'DCD-CNP-DEV'
           KeyVaultName: 'rd-aat'
           SecretsFilter: 'user-profile-api-POSTGRES-USER,user-profile-api-POSTGRES-PASS,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password'
+          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
         env:
           PGPASSWORD: $(user-profile-api-POSTGRES-PASS)
           AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-USER)
