changes to run cron job to test manually on aat

--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -49,11 +49,21 @@ jobs:
           azureSubscription: 'DCD-CNP-DEV'
           KeyVaultName: 'rd-aat'
           SecretsFilter: 'user-profile-api-POSTGRES-USER,user-profile-api-POSTGRES-PASS,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password'
-          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
         env:
-          PGPASSWORD: $(user-profile-api-POSTGRES-PASS)
-          AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-USER)
+          PGPASSWORD: $(user-profile-api-POSTGRES-USER)
+          AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-PASS)
           OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
           USERNAME: $(idam-rd-system-user-username)
           SYSPASS: $(idam-rd-system-user-password)
           ALL_USERS_FLAG: 1
+      - task: Bash@3
+        displayName: 'Generate and send SDT Stats'
+        name: generateSendSdtStats
+        inputs:
+          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
+        env:
+          PGPASSWORD: $(user-profile-api-POSTGRES-USER)
+          AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-PASS)
+          OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
+          USERNAME: $(idam-rd-system-user-username)
+          SYSPASS: $(idam-rd-system-user-password)
