--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -67,3 +67,4 @@ jobs:
           OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
           USERNAME: $(idam-rd-system-user-username)
           SYSPASS: $(idam-rd-system-user-password)
+          ALL_USERS_FLAG: 1
