moved job to monthly and created temp job or aat testign to be deleted

--- a/monthly-reports.yml
+++ b/monthly-reports.yml
@@ -16,6 +16,58 @@ variables:
   FAILURE_ADDRESS: 'dcd-devops-support@hmcts.net' # to be verified
 
 jobs:
+  - job: rd_userprofile
+    pool:
+      name: 'hmcts-ss-prod'
+    steps:
+      - task: AzureCLI@2
+        displayName: 'Generate Password token'
+        name: gettoken
+        inputs:
+          azureSubscription: 'Prod-DB-Reporting'
+          scriptType: bash
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            #!/bin/bash
+            set -ex
+            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
+            echo $output
+            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
+      - task: AzureKeyVault@2
+        displayName: 'Access reporting vault'
+        inputs:
+          azureSubscription: 'Prod-DB-Reporting'
+          KeyVaultName: 'sendgridprod'
+          SecretsFilter: 'hmcts-db-reporting-api-key'
+          RunAsPreJob: false
+        env:
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
+      - task: AzureKeyVault@2
+        displayName: 'Get Secrets'
+        name: getSecrets
+        inputs:
+          azureSubscription: 'DCD-CNP-DEV'
+          KeyVaultName: 'rd-aat'
+          SecretsFilter: 'user-profile-api-POSTGRES-USER,user-profile-api-POSTGRES-PASS,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password'
+        env:
+          PGPASSWORD: $(user-profile-api-POSTGRES-USER)
+          AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-PASS)
+          OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
+          USERNAME: $(idam-rd-system-user-username)
+          SYSPASS: $(idam-rd-system-user-password)
+          ALL_USERS_FLAG: 1
+      - task: Bash@3
+        displayName: 'Generate and send SDT Stats'
+        name: generateSendSdtStats
+        inputs:
+          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
+        env:
+          PGPASSWORD: $(user-profile-api-POSTGRES-USER)
+          AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-PASS)
+          OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
+          USERNAME: $(idam-rd-system-user-username)
+          SYSPASS: $(idam-rd-system-user-password)
+          ALL_USERS_FLAG: 1
   - job: pet_claimants
     pool:
       name: 'hmcts-ss-prod'
