--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -48,13 +48,14 @@ jobs:
         inputs:
           azureSubscription: 'DCD-CNP-DEV'
           KeyVaultName: 'rd-aat'
-          SecretsFilter: 'user-profile-api-POSTGRES-USER,user-profile-api-POSTGRES-PASS,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password'
+          SecretsFilter: 'user-profile-api-POSTGRES-USER,user-profile-api-POSTGRES-PASS,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password,user-profile-api-POSTGRES-PASS'
         env:
-          PGPASSWORD: $(user-profile-api-POSTGRES-USER)
+          user-profile-api-POSTGRES-USER: $(user-profile-api-POSTGRES-USER)
           AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-PASS)
           OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
           USERNAME: $(idam-rd-system-user-username)
           SYSPASS: $(idam-rd-system-user-password)
+          PGPASSWORD: $(user-profile-api-POSTGRES-PASS)
           ALL_USERS_FLAG: 1
       - task: Bash@3
         displayName: 'Generate and send SDT Stats'
@@ -62,9 +63,10 @@ jobs:
         inputs:
           filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam_TEMP_TEST_FOR_AAT_TO_BE_DELETED.sh'
         env:
-          PGPASSWORD: $(user-profile-api-POSTGRES-USER)
+          user-profile-api-POSTGRES-USER: $(user-profile-api-POSTGRES-USER)
           AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-PASS)
           OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
           USERNAME: $(idam-rd-system-user-username)
           SYSPASS: $(idam-rd-system-user-password)
+          PGPASSWORD: $(user-profile-api-POSTGRES-PASS)
           ALL_USERS_FLAG: 1
