--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -53,7 +53,7 @@ jobs:
           user-profile-api-POSTGRES-USER: $(user-profile-api-POSTGRES-USER)
           AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-PASS)
           OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
-          USERNAME: $(USERNAME)
-          SYSPASS: $(SYSPASS)
+          USERNAME: $(idam-rd-system-user-username)
+          SYSPASS: $(idam-rd-system-user-password)
           PGPASSWORD: $(user-profile-api-POSTGRES-PASS)
           ALL_USERS_FLAG: 1
