--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -18,20 +18,20 @@ variables:
 jobs:
   - job: rd_userprofile
     pool:
-      name: 'hmcts-ss-stg'
+      name: 'hmcts-ss-prod'
     steps:
       - task: AzureKeyVault@2
         displayName: 'Get Secrets'
         name: getSecrets
         inputs:
-          azureSubscription: 'DCD-CNP-DEV'
-          KeyVaultName: 'rd-aat'
+          azureSubscription: 'DCD-CNP-PROD'
+          KeyVaultName: 'rd-prod'
           SecretsFilter: 'OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password,user-profile-api-POSTGRES-PASS'
       - task: Bash@3
         displayName: 'Generate and send DB Report'
         name: generateSendDBReport
         inputs:
-          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam_TEMP_TEST_FOR_AAT_TO_BE_DELETED.sh'
+          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
         env:
           OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
           USERNAME: $(idam-rd-system-user-username)
