--- a/monthly-reports.yml
+++ b/monthly-reports.yml
@@ -16,15 +16,55 @@ variables:
   FAILURE_ADDRESS: 'dcd-devops-support@hmcts.net' # to be verified
 
 jobs:
-  - job: rd_userprofile
+  - job: pet_claimants
+    pool:
+      name: 'hmcts-ss-prod'
+    strategy:
+      maxParallel: 1
+      matrix:
+        ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-monthly-claimants:
+          QUERY: ./scripts/monthly/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-monthly-claimants.sh
+          TO_ADDRESS: 'ocmcteamleader@justice.gov.uk'
+          CC_ADDRESS: 'alliu.balogun@HMCTS.NET'
+          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
+          AZURE_DB: 'ccd_data_store'
+          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
+          SUBJECT: 'Monthly Claimants Report from CCD Data Store'
+    steps:
+      - task: AzureCLI@1
+        displayName: 'Get access token'
+        name: gettoken
+        inputs:
+          azureSubscription: $(serviceConnection)
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            #!/bin/bash
+            set -ex
+            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
+            echo $output
+            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
+      - task: AzureKeyVault@1
+        inputs:
+          azureSubscription: $(serviceConnection)
+          KeyVaultName: 'sendgridprod'
+          SecretsFilter: 'hmcts-db-reporting-api-key'
+          RunAsPreJob: false
+      - task: Bash@3
+        inputs:
+          filePath: 'email_report.sh'
+        env:
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
+          CONTAINER_NAME: 'daily'
+
+  - job: rd_org_attributes
     pool:
       name: 'hmcts-ss-prod'
     steps:
       - task: AzureCLI@2
-        displayName: 'Generate Password token'
+        displayName: 'Get access token'
         name: gettoken
         inputs:
-          azureSubscription: 'Prod-DB-Reporting'
+          azureSubscription: $(serviceConnection)
           scriptType: bash
           scriptLocation: 'inlineScript'
           inlineScript: |
@@ -33,39 +73,15 @@ jobs:
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             echo $output
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@2
-        displayName: 'Access reporting vault'
+      - task: AzureKeyVault@1
         inputs:
-          azureSubscription: 'Prod-DB-Reporting'
+          azureSubscription: $(serviceConnection)
           KeyVaultName: 'sendgridprod'
           SecretsFilter: 'hmcts-db-reporting-api-key'
           RunAsPreJob: false
+      - task: Bash@3
+        inputs:
+          filePath: './scripts/monthly/rd-professional-ref-api-postgres-db-prod-dbrefdata-monthly-org-attributes.sh'
         env:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
-      - task: AzureKeyVault@2
-        displayName: 'Get Secrets'
-        name: getSecrets
-        inputs:
-          azureSubscription: 'DCD-CNP-DEV'
-          KeyVaultName: 'rd-aat'
-          SecretsFilter: 'user-profile-api-POSTGRES-USER,user-profile-api-POSTGRES-PASS,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password'
-        env:
-          PGPASSWORD: $(user-profile-api-POSTGRES-USER)
-          AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-PASS)
-          OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
-          USERNAME: $(idam-rd-system-user-username)
-          SYSPASS: $(idam-rd-system-user-password)
-          ALL_USERS_FLAG: 1
-      - task: Bash@3
-        displayName: 'Generate and send SDT Stats'
-        name: generateSendSdtStats
-        inputs:
-          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
-        env:
-          PGPASSWORD: $(user-profile-api-POSTGRES-USER)
-          AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-PASS)
-          OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
-          USERNAME: $(idam-rd-system-user-username)
-          SYSPASS: $(idam-rd-system-user-password)
-          ALL_USERS_FLAG: 1
 
