--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -1,12 +1,12 @@
 
 name: Postgres DB Daily Reports
 schedules:
-- cron: "0 9 * * *"
-  displayName: Daily reports
-  branches:
-    include:
-    - master
-  always: true
+  - cron: "0 9 * * *"
+    displayName: Daily reports
+    branches:
+      include:
+        - master
+    always: true
 
 trigger: none
 pr: none
@@ -20,6 +20,25 @@ jobs:
     pool:
       name: 'hmcts-ss-prod'
     steps:
+      - task: AzureCLI@2
+        displayName: 'Get access token'
+        name: gettoken
+        inputs:
+          azureSubscription: $(serviceConnection)
+          scriptType: bash
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            #!/bin/bash
+            set -ex
+            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
+            echo $output
+            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
+      - task: AzureKeyVault@2
+        inputs:
+          azureSubscription: $(serviceConnection)
+          KeyVaultName: 'sendgridprod'
+          SecretsFilter: 'hmcts-db-reporting-api-key'
+          RunAsPreJob: false
       - task: AzureKeyVault@2
         displayName: 'Get Secrets'
         name: getSecrets
@@ -36,7 +55,6 @@ jobs:
           OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
           USERNAME: $(idam-rd-system-user-username)
           SYSPASS: $(idam-rd-system-user-password)
-          PGPASSWORD: $(user-profile-api-POSTGRES-PASS)
           ALL_USERS_FLAG: 1
   - job: rd_judicial
     pool:
