--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -56,6 +56,7 @@ jobs:
           USERNAME: $(idam-rd-system-user-username)
           SYSPASS: $(idam-rd-system-user-password)
           ALL_USERS_FLAG: 1
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
   - job: rd_judicial
     pool:
       name: 'hmcts-ss-prod'
