making changes for testing

--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -16,48 +16,7 @@ variables:
   FAILURE_ADDRESS: 'dcd-devops-support@hmcts.net' # to be verified
 
 jobs:
-  - job: rd_userprofile
-    pool:
-      name: 'hmcts-ss-prod'
-    steps:
-      - task: AzureCLI@2
-        displayName: 'Get access token'
-        name: gettoken
-        inputs:
-          azureSubscription: $(serviceConnection)
-          scriptType: bash
-          scriptLocation: 'inlineScript'
-          inlineScript: |
-            #!/bin/bash
-            set -ex
-            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
-            echo $output
-            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@2
-        inputs:
-          azureSubscription: $(serviceConnection)
-          KeyVaultName: 'sendgridprod'
-          SecretsFilter: 'hmcts-db-reporting-api-key'
-          RunAsPreJob: false
-      - task: AzureKeyVault@2
-        displayName: 'Get Secrets'
-        name: getSecrets
-        inputs:
-          azureSubscription: 'DCD-CNP-PROD'
-          KeyVaultName: 'rd-prod'
-          SecretsFilter: 'OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password,user-profile-api-POSTGRES-PASS'
-      - task: Bash@3
-        displayName: 'Generate and send DB Report'
-        name: generateSendDBReport
-        inputs:
-          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
-        env:
-          OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
-          USERNAME: $(idam-rd-system-user-username)
-          SYSPASS: $(idam-rd-system-user-password)
-          ALL_USERS_FLAG: 1
-          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
-  - job: rd_judicial
+  - job: rd_judicial_data
     pool:
       name: 'hmcts-ss-prod'
     steps:
@@ -82,180 +41,6 @@ jobs:
           RunAsPreJob: false
       - task: Bash@3
         inputs:
-          filePath: './scripts/daily/rd-judicial-api-postgres-db-prod-dbjuddata-daily-rowcount.sh'
+          filePath: './scripts/monthly/rd-judicial-ref-api-postgres-db-prod-dbrefdata-daily-org-attributes.sh'
         env:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
-
-  - job: rd_elinks_judicial
-    pool:
-      name: 'hmcts-ss-prod'
-    steps:
-      - task: AzureCLI@2
-        displayName: 'Get access token'
-        name: gettoken
-        inputs:
-          azureSubscription: $(serviceConnection)
-          scriptType: bash
-          scriptLocation: 'inlineScript'
-          inlineScript: |
-            #!/bin/bash
-            set -ex
-            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
-            echo $output
-            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@2
-        inputs:
-          azureSubscription: $(serviceConnection)
-          KeyVaultName: 'sendgridprod'
-          SecretsFilter: 'hmcts-db-reporting-api-key'
-          RunAsPreJob: false
-      - task: Bash@3
-        inputs:
-          filePath: './scripts/daily/rd-judicial-api-postgres-db-prod-elink-dbjudicialdata-daily-rowcount.sh'
-        env:
-          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
-
-  - job: rd_locationgit
-    pool:
-      name: 'hmcts-ss-prod'
-    steps:
-      - task: AzureCLI@2
-        displayName: 'Get access token'
-        name: gettoken
-        inputs:
-          azureSubscription: $(serviceConnection)
-          scriptType: bash
-          scriptLocation: 'inlineScript'
-          inlineScript: |
-            #!/bin/bash
-            set -ex
-            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
-            echo $output
-            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@2
-        inputs:
-          azureSubscription: $(serviceConnection)
-          KeyVaultName: 'sendgridprod'
-          SecretsFilter: 'hmcts-db-reporting-api-key'
-          RunAsPreJob: false
-      - task: Bash@3
-        inputs:
-          filePath: './scripts/daily/rd-location-ref-api-postgres-db-prod-dbrdlocationref-daily-locationrefdatarowcount.sh'
-        env:
-          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
-
-  - job: rd_commondata
-    pool:
-      name: 'hmcts-ss-prod'
-    steps:
-      - task: AzureCLI@2
-        displayName: 'Get access token'
-        name: gettoken
-        inputs:
-          azureSubscription: $(serviceConnection)
-          scriptType: bash
-          scriptLocation: 'inlineScript'
-          inlineScript: |
-            #!/bin/bash
-            set -ex
-            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
-            echo $output
-            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@2
-        inputs:
-          azureSubscription: $(serviceConnection)
-          KeyVaultName: 'sendgridprod'
-          SecretsFilter: 'hmcts-db-reporting-api-key'
-          RunAsPreJob: false
-      - task: Bash@3
-        inputs:
-          filePath: './scripts/daily/rd-commondata-api-postgres-db-prod-dbcommondata-daily-rowcount.sh'
-        env:
-          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
-
-  - job: ccd_daily
-    pool:
-      name: 'hmcts-ss-prod'
-    strategy:
-      maxParallel: 1
-      matrix:
-        ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-grantsissuedyesterdayextract:
-          QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-grantsissuedyesterdayextract.sh
-          TO_ADDRESS: 'probatefeedback@justice.gov.uk'
-          CC_ADDRESS: 'Probate.Docs@justice.gov.uk'
-          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
-          AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
-          SUBJECT: 'Grants-Issued-Yesterday-Extract Daily Report'
-        ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-stopsappliedtogrants:
-          QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-stopsappliedtogrants.sh
-          TO_ADDRESS: 'probatefeedback@justice.gov.uk'
-          CC_ADDRESS: 'Probate.Docs@justice.gov.uk'
-          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
-          AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
-          SUBJECT: 'Stops-applied-to-Grants Daily Report'
-        ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-inactivecasefordormant:
-          QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-inactivecasefordormant.sh
-          TO_ADDRESS: 'probate-inactive-case-aaaanoqxnyiwmzds6yxsvvbham@moj.org.slack.com'
-          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
-          AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
-          SUBJECT: 'Inactive-Case-For-Dormant Daily Report'
-        ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Welshlanguagedivorceissued:
-          QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Welshlanguagedivorceissued.sh
-          TO_ADDRESS: 'Kate.Pearce@justice.gov.uk'
-          CC_ADDRESS: 'Isabel.syred@justice.gov.uk'
-          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
-          AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
-          SUBJECT: 'Welsh-Language-Divorce-Issued Daily Report'
-        ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Welshlanguageissued:
-          QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Welshlanguageissued.sh
-          TO_ADDRESS: 'Kate.Pearce@justice.gov.uk'
-          CC_ADDRESS: 'helen.smith6@justice.gov.uk'
-          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
-          AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
-          SUBJECT: 'Welsh-Language-SSCS-Issued Daily Report'
-        ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-etOnlineSubmissions:
-          QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-etOnlineSubmissions.sh
-          TO_ADDRESS: 'Harpreet.Jhita@justice.gov.uk,daniel.thompson@justice.gov.uk,etreform@justice.gov.uk'
-          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
-          AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
-          SUBJECT: 'ET Online Claim Submission Report'
-        ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-etApplicationSubmissions:
-          QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-etApplicationSubmissions.sh
-          TO_ADDRESS: 'Harpreet.Jhita@justice.gov.uk,daniel.thompson@justice.gov.uk,etreform@justice.gov.uk'
-          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
-          AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
-          SUBJECT: 'ET Application Submission Report'
-    steps:
-      - task: AzureCLI@2
-        displayName: 'Get access token'
-        name: gettoken
-        inputs:
-          azureSubscription: $(serviceConnection)
-          scriptType: bash
-          scriptLocation: 'inlineScript'
-          inlineScript: |
-            #!/bin/bash
-            set -ex
-            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
-            echo $output
-            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@2
-        inputs:
-          azureSubscription: $(serviceConnection)
-          KeyVaultName: 'sendgridprod'
-          SecretsFilter: 'hmcts-db-reporting-api-key'
-          RunAsPreJob: false
-      - task: Bash@3
-        inputs:
-          filePath: 'email_report.sh'
-        env:
-          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
-          CONTAINER_NAME: 'daily'
-        retryCountOnTaskFailure: '3'
