--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -195,7 +195,7 @@ jobs:
           inlineScript: |
             #!/bin/bash
             set -ex
-            outputtoken=`az account get-access-token --resource-type https://ossrdbms-aad.database.windows.net --query accessToken -o tsv`
+            outputtoken=`az account get-access-token --resource https://ossrdbms-aad.database.windows.net --query accessToken -o tsv`
             echo $outputtoken
             echo "##vso[task.setvariable variable=PGPASSWORD]\"$outputtoken\""
       - task: AzureKeyVault@2
