--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -197,7 +197,7 @@ jobs:
             set -ex
             outputtoken=`az account get-access-token --resource https://ossrdbms-aad.database.windows.net --query accessToken -o tsv`
             echo $outputtoken
-            echo "##vso[task.setvariable variable=PGPASSWORD]\"$outputtoken\""
+            echo "##vso[task.setvariable variable=PGPASSWORD]$outputtoken"
       - task: AzureKeyVault@2
         inputs:
           azureSubscription: $(serviceConnection)
