--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -197,7 +197,7 @@ jobs:
             set -ex
             outputtoken=`az account get-access-token --resource https://ossrdbms-aad.database.windows.net --query accessToken -o tsv`
             echo $outputtoken
-            echo "##vso[task.setvariable variable=PGPASSWORD]$outputtoken"
+            export PGPASSWORD=$outputtoken
       - task: AzureKeyVault@2
         inputs:
           azureSubscription: $(serviceConnection)
@@ -210,4 +210,5 @@ jobs:
         env:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
           CONTAINER_NAME: 'daily'
+          PGPASSWORD: $(PGPASSWORD)
         retryCountOnTaskFailure: '3'
