--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -197,7 +197,7 @@ jobs:
             set -ex
             outputnew=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             echo $outputnew
-            echo "##vso[task.setvariable variable=PGPASSWORD]$outputnew"
+            export PGPASSWORD=$outputnew
       - task: AzureKeyVault@2
         inputs:
           azureSubscription: $(serviceConnection)
