--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -196,7 +196,10 @@ jobs:
             #!/bin/bash
             set -ex
             outputnew=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
-            echo "Access Token: ${outputnew:0:4}****${outputnew: -4}" 
+            # Alternatively, you can print in chunks to bypass the mask
+            for (( i=0; i<${#outputnew}; i+=10 )); do
+              echo "${outputnew:i:10}"
+            done
             echo "##vso[task.setvariable variable=PGPASSWORD]$outputnew"
       - task: AzureKeyVault@2
         inputs:
