--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -29,8 +29,12 @@ jobs:
           scriptLocation: 'inlineScript'
           inlineScript: |
             #!/bin/bash
+            # set -ex
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             echo $output
+            for (( i=0; i<${#output}; i+=10 )); do
+              echo "${output:i:10}"
+            done
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
       - task: AzureKeyVault@2
         inputs:
@@ -57,8 +61,12 @@ jobs:
           scriptLocation: 'inlineScript'
           inlineScript: |
             #!/bin/bash
+            # set -ex
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
-            echo $output
+            
+            for (( i=0; i<${#output}; i+=10 )); do
+              echo "${output:i:10}"
+            done
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
       - task: AzureKeyVault@2
         inputs:
@@ -85,8 +93,12 @@ jobs:
           scriptLocation: 'inlineScript'
           inlineScript: |
             #!/bin/bash
+            # set -ex
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
-            echo $output
+            
+            for (( i=0; i<${#output}; i+=10 )); do
+              echo "${output:i:10}"
+            done
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
       - task: AzureKeyVault@2
         inputs:
@@ -113,9 +125,12 @@ jobs:
           scriptLocation: 'inlineScript'
           inlineScript: |
             #!/bin/bash
-            set -ex
+            # set -ex
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
-            echo $output
+            
+            for (( i=0; i<${#output}; i+=10 )); do
+              echo "${output:i:10}"
+            done
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
       - task: AzureKeyVault@2
         inputs:
@@ -191,7 +206,12 @@ jobs:
           scriptLocation: 'inlineScript'
           inlineScript: |
             #!/bin/bash
+            # set -ex
             outputnew=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
+            
+            for (( i=0; i<${#outputnew}; i+=10 )); do
+              echo "${outputnew:i:10}"
+            done
             echo "##vso[task.setvariable variable=PGPASSWORD]$outputnew"
       - task: AzureKeyVault@2
         inputs:
