--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -32,9 +32,7 @@ jobs:
             # set -ex
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             echo $output
-            for (( i=0; i<${#output}; i+=10 )); do
-              echo "${output:i:10}"
-            done
+            sleep 3
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
       - task: AzureKeyVault@2
         inputs:
@@ -64,9 +62,7 @@ jobs:
             # set -ex
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             
-            for (( i=0; i<${#output}; i+=10 )); do
-              echo "${output:i:10}"
-            done
+            sleep 3
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
       - task: AzureKeyVault@2
         inputs:
@@ -96,9 +92,7 @@ jobs:
             # set -ex
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             
-            for (( i=0; i<${#output}; i+=10 )); do
-              echo "${output:i:10}"
-            done
+            sleep 3
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
       - task: AzureKeyVault@2
         inputs:
@@ -128,9 +122,7 @@ jobs:
             # set -ex
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             
-            for (( i=0; i<${#output}; i+=10 )); do
-              echo "${output:i:10}"
-            done
+            sleep 3
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
       - task: AzureKeyVault@2
         inputs:
@@ -209,9 +201,7 @@ jobs:
             # set -ex
             outputnew=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             
-            for (( i=0; i<${#outputnew}; i+=10 )); do
-              echo "${outputnew:i:10}"
-            done
+            sleep 3
             echo "##vso[task.setvariable variable=PGPASSWORD]$outputnew"
       - task: AzureKeyVault@2
         inputs:
